# rag

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  clubs.toml  docker-compose.yml  laws.toml  pyproject.toml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: concepts.md  roadmap.md
docs/plans/: plan-chunk.md  plan-embed-load.md  plan-english-pivot.md  plan-fetch-convert.md  plan-online-poc.md  plan-python-backend.md  plan-rag-playbook.md
docs/prds/: prd-embed-load.md  prd-english-pivot.md  prd-rag-playbook.md
docs/stages/: assemble.md  chunk.md  convert.md  embed.md  fetch.md  generate.md  load.md  retrieve.md
docs/theory/: chunking.md  corpus-and-parsing.md  embeddings.md  llm-generation.md  vector-indexes.md
scripts/: setup-dev-tools.sh
src/rag/: __init__.py
src/rag/api/: __init__.py  __main__.py
src/rag/api/static/: index.html
src/rag/ask/: __init__.py  __main__.py
src/rag/assemble/: __init__.py
src/rag/chunk/: __init__.py  __main__.py
src/rag/convert/: __init__.py  __main__.py
src/rag/embed/: __init__.py  __main__.py
src/rag/fetch/: __init__.py  __main__.py
src/rag/generate/: __init__.py
src/rag/load/: __init__.py  __main__.py
src/rag/query/: __init__.py  __main__.py
src/rag/retrieve/: __init__.py  __main__.py
tests/: conftest.py  pin_reference_vectors.py  test_api.py  test_ask.py  test_assemble.py  test_chunk.py  test_convert.py  test_embed.py  test_fetch.py  test_generate.py  test_load.py  test_query.py  test_retrieve.py  test_smoke.py
tests/fixtures/: reference_vectors.json
tests/fixtures/chunks/: absatzg.jsonl  artg.jsonl  brentford.jsonl  citypark.jsonl  fulham.jsonl  kassensichv.jsonl  splitg.jsonl  strukturg.jsonl  tabelleng.jsonl  tableg.jsonl
tests/fixtures/corpus/: absatzg.md  artg.md  brentford.md  citypark.md  fulham.md  kassensichv.md  splitg.md  strukturg.md  tabelleng.md  tableg.md
tests/fixtures/embeddings/: artg.jsonl  brentford.jsonl  citypark.jsonl  kassensichv.jsonl
tests/fixtures/prompts/: citypark_system.txt  citypark_user.txt  kassensichv_system.txt  kassensichv_user.txt
tests/fixtures/raw/artg/: fetch.json  law.xml
tests/fixtures/raw/brentford/: extract.txt  fetch.json
tests/fixtures/raw/fulham/: extract.txt  fetch.json
tests/fixtures/raw/kassensichv/: BJNR351500017.xml  (+1 more)
(+4 files in other folders)
