[project]
name = "rag"
version = "0.1.0"
description = "Learning project: a RAG system over German law texts, built from first principles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
  "lxml-stubs>=0.5.1",
  "pytest>=8",
  "ruff>=0.9",
  "ty>=0.0.59",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Defaults (E, F) plus import sorting, bugbear, pyupgrade, naming.
extend-select = ["I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: needs the real model cache or a reachable database; skips cleanly when unavailable",
]
