[project]
name = "rag"
version = "0.1.0"
description = "Learning project: a RAG system over English Wikipedia, built from first principles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.3.4",
    "sentence-transformers>=5.6.0",
    # Direct dependency only so the CPU-only index pin below applies (uv sources
    # don't reach transitive packages); imported via sentence-transformers.
    "torch>=2.13.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
    "ty>=0.0.59",
]

# CPU-only torch: the playbook is CPU-only by design; the default PyPI wheels bundle
# multi-GB CUDA libraries this project never uses.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Defaults plus the 100-char line limit, import sorting, bugbear, pyupgrade, naming.
extend-select = ["E501", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: needs the real model cache or a reachable database; skips cleanly when unavailable",
]
